--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -945,6 +945,7 @@ create_fast_downward_library(
         potentials/single_potential_heuristics
         potentials/subcategory
         potentials/util
+		potentials/spanner_heuristic
     DEPENDS
         lp_solver
         sampling
