implemented enviroment for handling features, infinity-dda heuristics and pdda heuristics

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -946,6 +946,9 @@ create_fast_downward_library(
         potentials/subcategory
         potentials/util
 		potentials/spanner_heuristic
+        potentials/potential_function_features
+        potentials/potential_heuristic_infinity
+        potentials/potential_heuristics_pdda
     DEPENDS
         lp_solver
         sampling
