finished logistics & implemented first function for termes

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -963,6 +963,7 @@ create_fast_downward_library(
         potentials/potential_heuristic_infinity
         potentials/potential_heuristics_pdda
         potentials/logistics_heuristic
+        potentials/termes_heuristic
     DEPENDS
         lp_solver
         sampling
